<resources>
    <string name="app_name">Snow</string>
    <string name="hint_username">请输入手机号</string>
    <string name="hint_password_conform">确认密码</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_verification_code">请输入验证码</string>
    <string name="btn_send_verification_code">获取验证码</string>
    <string name="btn_send_verification_code_countdown">秒后重新获取</string>
    <string name="btn_retrieve_password">重置密码</string>
    <string name="hint_new_password">新密码</string>
    <string name="btn_login">登录</string>
    <string name="btn_goto_retrieve_password">忘记密码？</string>
    <string name="btn_goto_register">去注册</string>
    <string name="btn_goto_password_login">账号密码登录</string>
    <string name="btn_goto_verification_code_login">短信验证码登录</string>
    <string name="btn_register">注册</string>
    <string name="home_nav_main">首页</string>
    <string name="home_nav_moments">动态</string>
    <string name="home_nav_mine">我的</string>
    <string name="title_verification_code_login">手机号快捷登录</string>
    <string name="title_password_login">账号密码登录</string>
    <string name="title_register">注册新账号</string>
    <string name="user_profile_likes">获赞</string>
    <string name="user_profile_followers">粉丝</string>
    <string name="user_profile_following">关注</string>
    <string name="integer_default_value">0</string>
    <string name="edit_user_profile">编辑</string>
    <string name="mine_mine_story">我的游记</string>
    <string name="mine_forward_story">转发动态</string>
    <string name="title_retrieve_password">重置密码</string>
    <string name="hint_search">搜你想搜~</string>
    <string name="food">特色美食</string>
    <string name="recommend_attraction">推荐景点</string>
    <string name="title_moments">发现</string>
    <string name="tourism_talent">旅游达人</string>
    <string name="following_attraction">关注景点</string>
    <string name="recent_moments">最近动态</string>
    <string name="search_history">历史搜索</string>
    <string name="search_result_attraction">景点</string>
    <string name="search_result_user">用户</string>
    <string name="search_result_story">游记</string>
    <string name="search_result">搜索结果</string>
    <string name="hint_no_search_history">没有搜索记录~</string>
    <string name="hint_no_more_story">没有更多游记了~</string>
    <string name="hint_no_more_user">没有更多用户了~</string>
    <string name="hint_no_search_result">没有搜索到结果~</string>
    <string name="user_story_list_no_story">还没有发布游记~</string>
    <string name="item_user_follow">立即关注</string>
    <string name="item_user_unfollow">已关注</string>
    <string name="my_profile_favorite">收藏</string>
    <string name="user_profile_story">他的游记</string>
    <string name="title_new_story">发布</string>
    <string name="hint_story_title">标题</string>
    <string name="hint_story_content">正文…</string>
    <string name="btn_release_story">发布</string>
    <string name="delete">删除</string>
    <string name="story_detail_follow_author">关注</string>
    <string name="story_detail_unfollow_author">已关注</string>
    <string name="story_detail_comment_title">评论</string>
    <string name="story_detail_send_comment">发送</string>
    <string name="hint_new_story_comment">添加一条评论</string>
    <string name="hint_no_more_comment">没有更多评论了~</string>
    <string name="hint_no_comment">还没有评论哟~</string>
    <string name="user_profile_favorites">收藏</string>
    <string name="edit_profile_title_edit">编辑</string>
    <string name="edit_profile_label_avatar">头像</string>
    <string name="edit_profile_label_nickname">昵称</string>
    <string name="edit_profile_label_signature">个性签名</string>
    <string name="edit_profile_save">保存</string>
    <string name="edit_profile_label_background">背景</string>
    <string name="edit_nickname_title">修改昵称</string>
    <string name="edit_profile_finish">完成</string>
    <string name="edit_signature_title">修改个性签名</string>
    <string name="edit_avatar_title">修改头像</string>
    <string name="edit_profile_from_camera">相机拍摄</string>
    <string name="edit_profile_from_gallery">选取图片</string>
    <string name="edit_background_title">修改背景</string>
    <string name="attraction_detail_hot_story_list">热门游记</string>
    <string name="attraction_detail_description_title">景点介绍</string>
    <string name="attraction_detail_more_picture">查看更多照片</string>
    <string name="hint_no_attraction_story">还有没游记~</string>
    <string name="score_attraction_current_score">当前评分</string>
    <string name="score_attraction_my_score">我的评分</string>
    <string name="score_attraction_cancel">取消</string>
    <string name="score_attraction_confirm">确定</string>
    <string name="hint_no_moments_story">还有没有动态~</string>
    <string name="hint_no_more_moments">没有更多动态了~</string>
    <string name="hint_no_more_attraction">没有更多景点了~</string>
    <string name="food_detail_attraction">相关景点</string>
    <string name="hint_no_attraction">还没有景点~</string>
    <string name="hint_no_food_attraction">没有相关的景点~</string>
    <string name="hint_no_following_attraction">还没有关注景点~</string>
    <string name="hint_no_recommend_user">还没有推荐的用户~</string>
    <string name="hint_no_recommend_attraction">还没有推荐景点~</string>
    <string name="hint_no_more_food">没有更多美食了~</string>
    <string name="hint_no_food">还没有美食~</string>
    <string name="title_my_favorite">我的收藏</string>
    <string name="hint_no_favorite_story">还没有收藏游记~</string>
</resources>