<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/close"
        style="@style/Widget.Snow.Button.PrimaryTextButton"
        android:layout_marginTop="56dp"
        android:layout_marginStart="18dp"
        app:icon="@drawable/ic_close"
        app:iconGravity="textStart"
        app:iconTint="@color/close_icon_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text="@string/title_register"
        android:textSize="22sp"
        android:layout_marginTop="36dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/close"/>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:background="@null"
        android:hint="@string/hint_username"
        android:inputType="phone"
        android:maxLines="1"
        android:maxLength="11"
        android:layout_marginTop="67dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/title"/>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:background="@null"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:maxLength="18"
        android:maxLines="1"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/username"/>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_confirm"
        android:background="@null"
        android:hint="@string/hint_password_conform"
        android:inputType="textPassword"
        android:maxLines="1"
        android:maxLength="18"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/password"/>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/verification_code"
        android:background="@null"
        android:hint="@string/hint_verification_code"
        android:inputType="number"
        android:maxLength="6"
        android:maxLines="1"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintTop_toBottomOf="@id/password_confirm"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/send_verification_code"
        style="@style/Widget.Snow.Button.PrimaryTextButton"
        android:textSize="12sp"
        android:text="@string/btn_send_verification_code"
        android:enabled="false"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toTopOf="@id/verification_code"
        app:layout_constraintBottom_toBottomOf="@id/verification_code"
        app:layout_constraintRight_toRightOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register"
        style="@style/Widget.Snow.PrimaryFilledButton"
        android:text="@string/btn_register"
        android:enabled="false"
        android:layout_marginTop="50dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        app:layout_constraintTop_toBottomOf="@id/verification_code"
        app:layout_constraintLeft_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>