<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/content_bg">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/search_result"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/text_dark"
        android:text="@string/search_result"
        android:layout_marginStart="18dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search_result_tab"
        android:background="@color/content_bg"
        android:layout_marginTop="12dp"
        app:tabIndicatorColor="@color/primary"
        app:tabRippleColor="@color/primary_ripple"
        app:tabSelectedTextColor="@color/primary"
        app:tabTextColor="@color/text_dark"
        app:tabMode="scrollable"
        app:layout_constraintTop_toBottomOf="@id/search_result">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_result_attraction"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_result_user"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_result_story"/>

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/search_result_page"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/search_result_tab"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>