<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/close"
        style="@style/Widget.Snow.Button.PrimaryTextButton"
        android:layout_marginTop="56dp"
        android:layout_marginStart="18dp"
        app:icon="@drawable/ic_close"
        app:iconTint="@color/close_icon_color"
        app:iconGravity="textStart"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text="@string/title_password_login"
        android:textSize="22sp"
        android:layout_marginTop="36dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/close"/>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:hint="@string/hint_username"
        android:background="@null"
        android:inputType="phone"
        android:maxLines="1"
        android:maxLength="11"
        android:layout_marginTop="67dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/title"/>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:background="@null"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:maxLength="18"
        android:maxLines="1"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        style="@style/Widget.Snow.PrimaryFilledButton"
        android:text="@string/btn_login"
        android:enabled="false"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/password"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/divider"
        android:src="@drawable/ic_vertical_text_divider"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login"
        tools:ignore="ContentDescription"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forget_password"
        style="@style/Widget.Snow.Button.UrlTextButton"
        android:text="@string/btn_goto_retrieve_password"
        android:textSize="12sp"
        android:textColor="@color/text_btn_url"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="@id/divider"
        app:layout_constraintBottom_toBottomOf="@id/divider"
        app:layout_constraintRight_toLeftOf="@id/divider"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register"
        style="@style/Widget.Snow.Button.UrlTextButton"
        android:text="@string/btn_goto_register"
        android:textSize="12sp"
        android:textColor="@color/text_btn_url"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/divider"
        app:layout_constraintBottom_toBottomOf="@id/divider"
        app:layout_constraintLeft_toRightOf="@id/divider"/>

</androidx.constraintlayout.widget.ConstraintLayout>