<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/content_bg"
    android:overScrollMode="never">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/back"
            style="@style/Widget.Snow.Button.DarkShadowButton"
            android:layout_marginTop="50dp"
            android:layout_marginStart="18dp"
            app:icon="@drawable/ic_arrow_left"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_avatar_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/text_dark"
            app:layout_constraintTop_toTopOf="@id/back"
            app:layout_constraintBottom_toBottomOf="@id/back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/finish_edit"
            style="@style/Widget.Snow.Button.PrimaryTextButton"
            android:text="@string/edit_profile_finish"
            android:textSize="18sp"
            android:enabled="false"
            android:layout_marginEnd="18dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/back"
            app:layout_constraintBottom_toBottomOf="@id/back"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/avatar"
            android:src="@drawable/ic_placeholder_avatar"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintWidth_percent="0.5"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/vertical_center"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/from_camera"
            style="@style/Widget.Snow.Button.BadgeButton"
            android:text="@string/edit_profile_from_camera"
            android:textSize="16sp"
            android:paddingVertical="8dp"
            android:paddingHorizontal="12dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="18dp"
            app:layout_constraintTop_toBottomOf="@id/avatar"
            app:layout_constraintRight_toLeftOf="@id/vertical_center"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/from_gallery"
            style="@style/Widget.Snow.Button.BadgeButton"
            android:text="@string/edit_profile_from_gallery"
            android:textSize="16sp"
            android:paddingVertical="8dp"
            android:paddingHorizontal="12dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="18dp"
            app:layout_constraintTop_toBottomOf="@id/avatar"
            app:layout_constraintLeft_toRightOf="@id/vertical_center"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>