<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:paddingHorizontal="18dp"
    android:paddingVertical="20dp">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/score"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/primary"
        app:layout_constraintTop_toTopOf="@id/score_container"
        app:layout_constraintBottom_toBottomOf="@id/score_container"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/score_container"
        tools:text="4.2"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/current_score"
        android:textSize="12sp"
        android:textColor="@color/text_dark_light"
        android:text="@string/score_attraction_current_score"
        android:layout_marginTop="12dp"
        app:layout_constraintLeft_toLeftOf="@id/score"
        app:layout_constraintRight_toRightOf="@id/score"
        app:layout_constraintTop_toBottomOf="@id/score_container"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/score_container"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/score">

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/score_one"
            style="@style/Widget.Snow.Button.PrimaryTextButton"
            app:icon="@drawable/ic_start"
            app:iconPadding="0dp"
            app:iconSize="24dp"
            app:iconTint="@color/text_dark_light"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/score_two"
            style="@style/Widget.Snow.Button.PrimaryTextButton"
            app:icon="@drawable/ic_start"
            app:iconPadding="0dp"
            app:iconSize="24dp"
            app:iconTint="@color/text_dark_light"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/score_three"
            style="@style/Widget.Snow.Button.PrimaryTextButton"
            app:icon="@drawable/ic_start"
            app:iconPadding="0dp"
            app:iconSize="24dp"
            app:iconTint="@color/text_dark_light"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/score_four"
            style="@style/Widget.Snow.Button.PrimaryTextButton"
            app:icon="@drawable/ic_start"
            app:iconPadding="0dp"
            app:iconSize="24dp"
            app:iconTint="@color/text_dark_light"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/score_five"
            style="@style/Widget.Snow.Button.PrimaryTextButton"
            app:icon="@drawable/ic_start"
            app:iconPadding="0dp"
            app:iconSize="24dp"
            app:iconTint="@color/text_dark_light"/>

    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/my_score"
        android:textSize="12sp"
        android:textColor="@color/text_dark_light"
        android:text="@string/score_attraction_my_score"
        android:layout_marginTop="12dp"
        app:layout_constraintLeft_toLeftOf="@id/score_container"
        app:layout_constraintRight_toRightOf="@id/score_container"
        app:layout_constraintTop_toBottomOf="@id/score_container"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_guide_line"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancel"
        style="@style/Widget.Snow.Button.PrimaryTextButton"
        android:text="@string/score_attraction_cancel"
        android:textSize="18sp"
        android:textColor="@color/text_dark_mid"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_guide_line"
        app:layout_constraintTop_toBottomOf="@id/my_score"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/confirm"
        style="@style/Widget.Snow.Button.PrimaryTextButton"
        android:text="@string/score_attraction_confirm"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@id/button_guide_line"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/cancel"/>

</androidx.constraintlayout.widget.ConstraintLayout>